# cvdrone

./: CMakeLists.txt
samples/: tracking.cpp
src/: cascade_classifier.cpp  faceDetectionOpenCV.cpp  sample.cpp  sample_opencv.cpp
